# pearson-correlation-plugin

./: .gitignore  README.html  README.md  pearson_correlation.py  plugin.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy-spa.yml
examples/diann/: annotation_with_score.txt
