[project]
name = "pearson-correlation-plugin"
version = "0.1.0"
description = ""
authors = [
    {name = "Toan Phung",email = "tphung001@dundee.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click (>=8.3.1,<9.0.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "statsmodels (>=0.14.6,<0.15.0)",
    "scikit-learn (>=1.3.0,<2.0.0)",
    "plotly (>=6.6.0,<7.0.0)",
    "dcor (>=0.7,<0.8)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
